확진자 추이 그래프 추가

--- a/index.html
+++ b/index.html
@@ -585,6 +585,31 @@
                 </div>
                 <!-- //시나리오별 상황예측 -->
 
+                <!-- 한국과 세계 확진자 추이 그래프 -->
+                <div class="col-xl-12 col-lg-6">
+                  <div class="card shadow mb-4">
+                    <!-- Card Header - Dropdown -->
+                    <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
+                      <h6 class="m-0 font-weight-bold text-danger">한국과 세계 확진자 추이 그래프(전일차/확진자 * 100)</h6>
+                      <div class="dropdown no-arrow">
+                        <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                          <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
+                        </a>
+                        <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in" aria-labelledby="dropdownMenuLink">
+                          <div class="dropdown-header">상세</div>
+                          <a class="dropdown-item" href="#">상세보기
+                          </a>
+                        </div>
+                      </div>
+                    </div>
+                    <!-- Card Body -->
+                    <div class="card-body" style="height:35rem">
+                      <canvas id="myAreaChart_five"></canvas>
+                    </div>
+                  </div>
+                </div>
+                <!-- //한국과 세계 확진자 추이 그래프 -->
+
               </div>
             </div>
           </div>
