입도현황 hover시 삐져나오는거 확진자 현황 치명율 삐져나오는거 수정

--- a/index.html
+++ b/index.html
@@ -274,8 +274,8 @@
                 <!-- Card Body -->
                 <div style="height:38.2rem;" class="card-body">
                   <canvas id="myAreaChart_four"></canvas>
-                  <p style="margin-left: 2rem; margin-top: -1.2rem;">현재(<span id="치명율_날짜"></span>) 국내 치명율 : <span id="치명율"></span>%, 세계 치명율 : <span id="세계치명율"></span>% (치명율 : 사망자/확진자 비율)</p>
                 </div>
+                <p style="margin-left: 2rem; margin-top: -1.2rem;">현재(<span id="치명율_날짜"></span>) 국내 치명율 : <span id="치명율"></span>%, 세계 치명율 : <span id="세계치명율"></span>% (치명율 : 사망자/확진자 비율)</p>
               </div>
             </div>
             <!-- //한국 확진자 추이 분석 -->
@@ -772,7 +772,7 @@
                 <!-- //제주 최신 정보(최근 중국인 이동 경로) -->
 
                 <!-- 중국관광객 제주 입도 현황(2월 4일 무사증 중단) -->
-                <div class="col-xl-12 col-lg-12">
+                <div class="col-xl-12 col-lg-12 ">
                   <div class="card shadow mb-4">
                     <!-- Card Header - Dropdown -->
                     <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
@@ -798,8 +798,8 @@
                 <!-- //중국관광객 제주 입도 현황(2월 4일 무사증 중단) -->
 
                 <!-- 중국인 일일 입도 현황 -->
-                <div class="col-xl-12 col-lg-12">
-                  <div class="card shadow mb-4">
+                <div class="col-xl-12 col-lg-12 ">
+                  <div class="card shadow mb-4 jeju_in">
                     <!-- Card Header - Dropdown -->
                     <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
                       <h6 class="m-0 font-weight-bold text-danger">일일 입도현황(제주도청 제공, 무사증 중단 후)</h6>
