--- a/index.html
+++ b/index.html
@@ -590,7 +590,7 @@
                   <div class="card shadow mb-4">
                     <!-- Card Header - Dropdown -->
                     <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                      <h6 class="m-0 font-weight-bold text-danger">한국과 세계 확진자 추이 그래프</h6>
+                      <h6 class="m-0 font-weight-bold text-danger">한국과 세계 확진자 확진자 증가율 그래프</h6>
                       <div class="dropdown no-arrow">
                         <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                           <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
@@ -607,7 +607,7 @@
                       <canvas id="myAreaChart_five"></canvas>
                     </div>
                     <ul style="margin-left: 2rem">
-                      <li>추이 계산식 : (당일확진자-전일확진자)/당일확진자 * 100</li>
+                      <li>확진자 증가율 계산식 : (당일확진자-전일확진자)/당일확진자 * 100</li>
                       <li>2월 18일 : 31번 환자 확진(신천지 신자)</li>
                       <li>2월 23일 : 심각단계 격상</li>
                     </ul>
