--- a/index.html
+++ b/index.html
@@ -678,6 +678,9 @@
                                 <li>18시20분경 : 제주보건소 구급차로 제주대병원으로 이송</li>
                               </ul>
                               <div class="source"><span class="title">출처</span><span class="desc"><a href="http://www.jejusori.net">제주의소리</a></span></div>
+                              <br>
+                              <div class="source"><span class="title">상세정보</span><span class="desc"><a href="https://jeju.go.kr/files/convert/202002/99cb45de-763d-41f2-bf48-2b5da5549045.hwp.htm" target="_blank">제주특별자치도 정보제공 상세이동경로</a></span></div>
+
                             </div>
                           </div>
                         </div>
@@ -741,6 +744,8 @@
                               </ul>
                               <div class="source"><span class="title">출처</span><span class="desc"><a href="http://www.jeju.go.kr/wel/healthCare/corona/coronaNotice.htm?act=view&seq=1233486">제주특별자치도</a><br>
                                 * 해당 양성반응자는 2월 22일 확진 판정</span></div>
+                              <br>
+                              <div class="source"><span class="title">상세정보</span><span class="desc"><a href="https://jeju.go.kr/files/convert/202002/99cb45de-763d-41f2-bf48-2b5da5549045.hwp.htm" target="_blank">제주특별자치도 정보제공 상세이동경로</a></span></div>
                             </div>
                           </div>
                         </div>
@@ -1319,7 +1324,7 @@
                         <a href="http://news.kbs.co.kr/common/main.html" target="_blank">KBS</a>, 및 <a href="http://www.jeju.go.kr/wel/healthCare/corona/coronaNotice.htm">제주도청</a>의 데이터를 근거하여 매일 업데이트합니다.
                       </li>
                       <li>
-                        GDG(Google Developer Group)등 자발적으로 참여해주신 분들께서 팀을 꾸려 비용을 받지 않고 업데이트 중에 있습니다.
+                        자발적으로 참여해주신 분들께서 팀을 꾸려 비용을 받지 않고 업데이트 중에 있습니다.
                       </li>
                       <li>
                         업데이트 및 추가 기능 문의는 필요하신 경우 메일로 연락주세요.
@@ -1327,6 +1332,9 @@
                       </li>
                       <li>
                         <a href="https://www.ncloud.com" target="_blank">네이버 클라우드 플랫폼</a>에서 서버 및 지도 API를 무상 지원합니다.
+                      </li>
+                      <li>
+                        모든 소스는 오픈되어 있습니다. 다음에도 비슷한 상황이 발생되었을 경우, 이 <a href="https://github.com/LiveCoronaDetector/livecod" target="_blank">프로젝트</a>를 사용해주세요.
                       </li>
                     </ul>
                     <p class="text-right">
