제주확진자 추가

--- a/index.html
+++ b/index.html
@@ -756,19 +756,16 @@
                           <div class="card-header" id="headingFour">
                             <h2 class="mb-0 cases-title">
                               <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="true" aria-controls="collapseFour">
-                                제주도, 신천지 교인 유증상자 36명 전원 음성판정
+                                세번째 확진자 <span class="desc">(아직 동선이 공개되지 않았습니다)</span>
                               </button>
                             </h2>
                           </div>
                           <div id="collapseFour" class="collapse hide" aria-labelledby="headingOne" data-parent="#accordionExample">
                             <div class="card-body">
                               <ul>
-                                <li>제주특별자치도는 중앙재난안전대책본부(이하 중대본)로부터 제공받은 646명 도내 신천지 교인 중 확인된 유증상자 총 36명을 검사한 결과 모두 음성으로 판정됐다고 밝혔다.</li>
-                                <li>중대본이 제주도에 통보해온 제주지역 신천지 교인은 646명으로, 제주도는 신천지 교인 명단 통보 즉시 전화 문진에 돌입해 밤샘 작업 끝에 27일 오후 5시까지 634명과 전화통화 하고 이 중 코로나19 유증상자 36명에 대해 제주도보건환경연구원의 검체 검사를 실시했다.</li>
-                                <li>제주도는 유증상자 중 27일 오전 27명, 오후 5시에 5명이 음성판정을 받은데 이어 오후 9시 35분 결과가 남아있던 4명이 음성으로 나타남에 따라 유증상자 36명 전원이 음성판정을 받았다고 발표했다.</li>
-                                <li>한편 제주도는 정부가 27일 신천지 교단으로부터 전달받은 6만 여명의 교육생 중 제주 주소지를 둔 교육생 명단도 조만간 확보해 전수조사에 나설 예정이다.</li>
+                                <li>아직 동선이 공개되지 않았습니다.</li>
                               </ul>
-                              <div class="source"><span class="title">출처</span><span class="desc"><a href="http://www.jeju.go.kr/wel/healthCare/corona/coronaNotice.htm?page=1&act=view&seq=1234112">제주특별자치도</a></span></div>
+                              <div class="source"><span class="title">출처</span><span class="desc"><a href="http://www.jejusori.net/news/articleView.html?idxno=312644">제주의소리</a></span></div>
                             </div>
                           </div>
                         </div>
