--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
 
   <!-- Custom fonts for this template-->
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
-  <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
 
   <!-- Custom styles for this template-->
   <link href="css/common.css" rel="stylesheet">
@@ -67,8 +66,7 @@
           <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <h1 class="title" style="vertical-align: middle;">
               <img src='img/live.svg' /> 라이브 코로나 맵</h1>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent"
-              aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
           </nav>
@@ -194,12 +192,9 @@
                     </span>
                   </div>
                   <div class="progress mb-4">
-                    <div class="progress-bar bg-warning koreanChart" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"
-                      data-toggle="tooltip" data-placement="bottom"></div>
-                    <div class="progress-bar bg-success koreanChart" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"
-                      data-toggle="tooltip" data-placement="bottom"></div>
-                    <div class="progress-bar bg-danger koreanChart" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"
-                      data-toggle="tooltip" data-placement="bottom"></div>
+                    <div class="progress-bar bg-warning koreanChart" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" data-placement="bottom"></div>
+                    <div class="progress-bar bg-success koreanChart" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" data-placement="bottom"></div>
+                    <div class="progress-bar bg-danger koreanChart" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" data-placement="bottom"></div>
                   </div>
                   <h6>세계현황</h6>
                   <div class="small font-weight-bold">
@@ -210,12 +205,9 @@
                     </span>
                   </div>
                   <div class="progress mb-4">
-                    <div class="progress-bar bg-warning worldChart" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"
-                      data-toggle="tooltip" data-placement="bottom"></div>
-                    <div class="progress-bar bg-success worldChart" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"
-                      data-toggle="tooltip" data-placement="bottom"></div>
-                    <div class="progress-bar bg-danger worldChart" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"
-                      data-toggle="tooltip" data-placement="bottom"></div>
+                    <div class="progress-bar bg-warning worldChart" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" data-placement="bottom"></div>
+                    <div class="progress-bar bg-success worldChart" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" data-placement="bottom"></div>
+                    <div class="progress-bar bg-danger worldChart" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" data-placement="bottom"></div>
                   </div>
                 </div>
               </div>
@@ -240,10 +232,10 @@
                 </div>
                 <!-- Card Body -->
                 <div class="card-body text-center">
-                    <h6>확진자</h6>
-                    <div class="count-text mb-3"><span id="제주확진자"></span>명</div>
-                    <h6>사망자</h6>
-                    <div class="count-text"><span id="제주사망자"></span>명</div>
+                  <h6>확진자</h6>
+                  <div class="count-text mb-3"><span id="제주확진자"></span>명</div>
+                  <h6>사망자</h6>
+                  <div class="count-text"><span id="제주사망자"></span>명</div>
                 </div>
               </div>
             </div>
@@ -266,7 +258,8 @@
                     </a>
                     <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in" aria-labelledby="dropdownMenuLink">
                       <div class="dropdown-header">상세</div>
-                      <a class="dropdown-item" href="https://ko.wikipedia.org/wiki/%EB%8C%80%ED%95%9C%EB%AF%BC%EA%B5%AD%EC%9D%98_%EC%BD%94%EB%A1%9C%EB%82%98%EB%B0%94%EC%9D%B4%EB%9F%AC%EC%8A%A4%EA%B0%90%EC%97%BC%EC%A6%9D-19_%EC%9C%A0%ED%96%89">일별 데이터 상세보기
+                      <a class="dropdown-item" href="https://ko.wikipedia.org/wiki/%EB%8C%80%ED%95%9C%EB%AF%BC%EA%B5%AD%EC%9D%98_%EC%BD%94%EB%A1%9C%EB%82%98%EB%B0%94%EC%9D%B4%EB%9F%AC%EC%8A%A4%EA%B0%90%EC%97%BC%EC%A6%9D-19_%EC%9C%A0%ED%96%89">일별 데이터
+                        상세보기
                       </a>
                     </div>
                   </div>
@@ -443,8 +436,7 @@
                     <li><a href="http://www.cdc.go.kr/contents.es?mid=a21111060000">질병관리본부 안전수칙</a></li>
                     <li><a href="https://www.cdc.go.kr/linkCheck.es?mid=a21111050600">코로나19 바이러스 선별진료소</a></li>
                   </ul>
-                  <a class="btn btn-primary" style="width:100%;margin-bottom:1rem;" href="https://www.notion.so/a80c76132f8b4a63a6f4901b1320bf62"
-                    role="button">자기동선기록 가이드</a>
+                  <a class="btn btn-primary" style="width:100%;margin-bottom:1rem;" href="https://www.notion.so/a80c76132f8b4a63a6f4901b1320bf62" role="button">자기동선기록 가이드</a>
                   <a class="btn btn-primary" style="width:100%;margin-bottom:1rem;" href="https://news.naver.com/main/factcheck/main.nhn" role="button">코로나19 바이러스 관련 팩트체크</a>
                   <a class="btn btn-primary" style="width:100%" href="https://www.notion.so/381a1f09e420476c839cdbe543dbb3bb" role="button">소상공인 지원사업</a>
                 </div>
@@ -484,7 +476,7 @@
                       <div class="table-responsive">
                         <p class="text-right mb-1">※ 20년 2월 10일 기준</p>
                         <table class="table table-bordered table-sm text-center" cellspacing="0">
-                            <colgroup>
+                          <colgroup>
                             <col style="width:160px" />
                             <col style="width:auto" />
                             <col style="width:auto" />
@@ -576,10 +568,11 @@
                     <div class="card-body">
                       <img src="img/lancet.jpg" alt="Nowcasting and forecasting the potential domestic and international spread of the 2019-nCoV outbreak originating in Wuhan, China: a modelling study" class="img-fluid">
                       <p style="margin-top:0.5rem;">
-                          ※ 1월 25일까지의 감염력이 유지된다는 전제 하 그래프 입니다. 이를 바탕으로 다양한 시나리오별 예측값을 시각화할 예정이며, 차후 비슷한 사례가 발생되었을 경우에도 사용할 수 있도록
+                        ※ 1월 25일까지의 감염력이 유지된다는 전제 하 그래프 입니다. 이를 바탕으로 다양한 시나리오별 예측값을 시각화할 예정이며, 차후 비슷한 사례가 발생되었을 경우에도 사용할 수 있도록
                         모든 소스를 오픈하도록 하겠습니다.
                       </p>
-                      <div class="source"><span class="title">출처</span><span class="desc">lancet 논문 '<a href="https://www.thelancet.com/journals/lancet/article/PIIS0140-6736(20)30260-9/fulltext">Nowcasting and forecasting the potential domestic and international spread of the 2019-nCoV outbreak originating in Wuhan, China: a modelling study</a>'</span></div>
+                      <div class="source"><span class="title">출처</span><span class="desc">lancet 논문 '<a href="https://www.thelancet.com/journals/lancet/article/PIIS0140-6736(20)30260-9/fulltext">Nowcasting and forecasting the potential domestic and
+                            international spread of the 2019-nCoV outbreak originating in Wuhan, China: a modelling study</a>'</span></div>
                     </div>
                   </div>
                 </div>
@@ -631,14 +624,10 @@
                     <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
                       <h6 class="m-0 font-weight-bold text-danger">제주 확진판정자 이동경로 및 주요뉴스</h6>
                       <div class="dropdown no-arrow">
-                        <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown"
-
-                          aria-haspopup="true" aria-expanded="false">
+                        <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                           <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
                         </a>
-                        <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in"
-
-                          aria-labelledby="dropdownMenuLink">
+                        <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in" aria-labelledby="dropdownMenuLink">
                           <div class="dropdown-header">상세</div>
                           <a class="dropdown-item" href="http://www.cdc.go.kr/contents.es?mid=a21111060000">상세내용</a>
                         </div>
@@ -743,7 +732,7 @@
                                 </li>
                               </ul>
                               <div class="source"><span class="title">출처</span><span class="desc"><a href="http://www.jeju.go.kr/wel/healthCare/corona/coronaNotice.htm?act=view&seq=1233486">제주특별자치도</a><br>
-                                * 해당 양성반응자는 2월 22일 확진 판정</span></div>
+                                  * 해당 양성반응자는 2월 22일 확진 판정</span></div>
                               <br>
                               <div class="source"><span class="title">상세정보</span><span class="desc"><a href="https://jeju.go.kr/files/convert/202002/99cb45de-763d-41f2-bf48-2b5da5549045.hwp.htm" target="_blank">제주특별자치도 정보제공 상세이동경로</a></span></div>
                             </div>
@@ -751,25 +740,32 @@
                         </div>
                         <!-- //확진자 News 2 -->
 
-                        <!-- 제주도 News 1 -->
+                        <!-- 확진자 News 3 -->
                         <div class="card">
                           <div class="card-header" id="headingFour">
                             <h2 class="mb-0 cases-title">
                               <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="true" aria-controls="collapseFour">
-                                세번째 확진자 <span class="desc">(아직 동선이 공개되지 않았습니다)</span>
+                                세번째 확진자 <span class="desc">(대구 거주 후 입도한 A씨)</span>
                               </button>
                             </h2>
                           </div>
                           <div id="collapseFour" class="collapse hide" aria-labelledby="headingOne" data-parent="#accordionExample">
                             <div class="card-body">
                               <ul>
-                                <li>아직 동선이 공개되지 않았습니다.</li>
+                                <li>제주특별자치도는 대구에 거주하다 지난 23일 제주에 입도한 A씨(48·여성)가 코로나19 확정판정을 받아 제주대병원 음압병실로 이송됐다고 밝혔다.</li>
+                                <li>제주도는 3월 2일 오전 0시 5분 제주도보건환경연구원으로부터 A씨에 대한 검체 검사 결과, 확진 판정을 통보 받았다.</li>
+                                <li>제주도에 따르면, A씨는 지난 2월 23일 오후 4시 45분 대구발 제주행 티웨이항공편으로 오후 5시 30분께 제주에 도착한 후 지인 B씨의 승용차를 타고 제주시 조천읍 함덕 소재 B씨의 자택으로 이동해 머물러왔다.</li>
+                                <li>A씨는 3월 1일 오후 5시쯤 대구에 살고 있는 어머니의 코로나19 확진 판정 소식을 듣고 제주시내 모 병원 선별진료소에 자진해서 승용차로 간 뒤 검사를 받은 것으로 전해졌다.</li>
+                                <li>A씨는 2월 28일부터 코막힘, 목 잠김 증상이 나타나기 시작한 것으로 알려졌으며, 대구에 사는 A씨의 언니는 검사 결과 2월 29일 음성판정을 받은 것으로 확인됐다.</li>
+                                <li>제주도는 A씨와 함께 지내 온 지인 B씨의 경우 현재 특이 증상은 없지만 검체 검사를 진행할 방침이다.</li>
+                                <li>제주도는 A씨의 상세한 동선과 접촉자 등은 역학조사 후에 후속 보도자료 등을 통해 공개할 것으로 밝혔다.</li>
+                                <li>한편, A씨는 스스로 신천지와 연관이 없다는 진술을 했고, 제주도는 이에 대해서도 추가적으로 사실 관계를 확인할 예정이다.</li>
                               </ul>
-                              <div class="source"><span class="title">출처</span><span class="desc"><a href="http://www.jejusori.net/news/articleView.html?idxno=312644">제주의소리</a></span></div>
+                              <div class="source"><span class="title">출처</span><span class="desc"><a href="http://www.jeju.go.kr/wel/healthCare/corona/coronaNotice.htm?act=view&seq=1234260">제주특별자치도</a></span></div>
                             </div>
                           </div>
                         </div>
-                        <!-- //제주도 News 1 -->
+                        <!-- //확진자 News 3 -->
 
                       </div>
 
@@ -1400,23 +1396,21 @@
 
     // 지역별확진자 업데이트 시간
     document.getElementById("지역별확진자_업데이트_시간_태그").innerHTML = 지역별확진자_업데이트_시간;
-
-
   </script>
 
   <script>
-    document.getElementById("치명율").innerHTML = ((분석차트_한국누적확진자[분석차트_한국누적확진자.length-1][3]/분석차트_한국누적확진자[분석차트_한국누적확진자.length-1][1])* 100).toFixed(2);
-    document.getElementById("세계치명율").innerHTML = ((사망자수/확진자수)* 100).toFixed(2);
+    document.getElementById("치명율").innerHTML = ((분석차트_한국누적확진자[분석차트_한국누적확진자.length - 1][3] / 분석차트_한국누적확진자[분석차트_한국누적확진자.length - 1][1]) * 100).toFixed(2);
+    document.getElementById("세계치명율").innerHTML = ((사망자수 / 확진자수) * 100).toFixed(2);
 
-    document.getElementById("치명율_날짜").innerHTML = 분석차트_한국누적확진자[분석차트_한국누적확진자.length-1][0];
+    document.getElementById("치명율_날짜").innerHTML = 분석차트_한국누적확진자[분석차트_한국누적확진자.length - 1][0];
   </script>
 
   <script>
     // 국내, 세계 상세현황 그래프 관련 스크립트
-    var korea = marker.find(function (i) {
+    var korea = marker.find(function(i) {
       return i.Name == "한국";
     });
-    var jeju = marker.find(function (i) {
+    var jeju = marker.find(function(i) {
       return i.Name == "제주";
     });
     var 모든확진자수 = 확진자수;
@@ -1487,18 +1481,18 @@
   <!-- A 태그 #앵커 부드러운 이동 -->
   <script>
     document.querySelectorAll('a[href^="#"]').forEach(function(anchor) {
-      anchor.addEventListener('click', function (e) {
-          e.preventDefault();
-          document.querySelector(this.getAttribute('href')).scrollIntoView({
-              behavior: 'smooth'
-          });
+      anchor.addEventListener('click', function(e) {
+        e.preventDefault();
+        document.querySelector(this.getAttribute('href')).scrollIntoView({
+          behavior: 'smooth'
+        });
       });
     });
   </script>
 
   <!-- 15분마다 사이트 새로고침 -->
   <script>
-    setInterval(function () {
+    setInterval(function() {
       window.location.reload();
     }, 15 * (1000 * 60));
   </script>
@@ -1512,7 +1506,7 @@
       name = name + "=";
       var decodedCookie = decodeURIComponent(document.cookie);
       var ca = decodedCookie.split(';');
-      for(var i = 0; i < ca.length; i++) {
+      for (var i = 0; i < ca.length; i++) {
         var c = ca[i];
         while (c.charAt(0) == ' ') {
           c = c.substring(1);
