제주확진자3

--- a/index.html
+++ b/index.html
@@ -751,17 +751,320 @@
                           </div>
                           <div id="collapseFour" class="collapse hide" aria-labelledby="headingOne" data-parent="#accordionExample">
                             <div class="card-body">
-                              <ul>
-                                <li>제주특별자치도는 대구에 거주하다 지난 23일 제주에 입도한 A씨(48·여성)가 코로나19 확정판정을 받아 제주대병원 음압병실로 이송됐다고 밝혔다.</li>
-                                <li>제주도는 3월 2일 오전 0시 5분 제주도보건환경연구원으로부터 A씨에 대한 검체 검사 결과, 확진 판정을 통보 받았다.</li>
-                                <li>제주도에 따르면, A씨는 지난 2월 23일 오후 4시 45분 대구발 제주행 티웨이항공편으로 오후 5시 30분께 제주에 도착한 후 지인 B씨의 승용차를 타고 제주시 조천읍 함덕 소재 B씨의 자택으로 이동해 머물러왔다.</li>
-                                <li>A씨는 3월 1일 오후 5시쯤 대구에 살고 있는 어머니의 코로나19 확진 판정 소식을 듣고 제주시내 모 병원 선별진료소에 자진해서 승용차로 간 뒤 검사를 받은 것으로 전해졌다.</li>
-                                <li>A씨는 2월 28일부터 코막힘, 목 잠김 증상이 나타나기 시작한 것으로 알려졌으며, 대구에 사는 A씨의 언니는 검사 결과 2월 29일 음성판정을 받은 것으로 확인됐다.</li>
-                                <li>제주도는 A씨와 함께 지내 온 지인 B씨의 경우 현재 특이 증상은 없지만 검체 검사를 진행할 방침이다.</li>
-                                <li>제주도는 A씨의 상세한 동선과 접촉자 등은 역학조사 후에 후속 보도자료 등을 통해 공개할 것으로 밝혔다.</li>
-                                <li>한편, A씨는 스스로 신천지와 연관이 없다는 진술을 했고, 제주도는 이에 대해서도 추가적으로 사실 관계를 확인할 예정이다.</li>
-                              </ul>
-                              <div class="source"><span class="title">출처</span><span class="desc"><a href="http://www.jeju.go.kr/wel/healthCare/corona/coronaNotice.htm?act=view&seq=1234260">제주특별자치도</a></span></div>
+                              <p>※ 도내 세번째 확진자 진술에 따른 동선(2월 26일~3월 1일)</p>
+                              <table class="table">
+                              	<tbody>
+                              		<tr>
+                              			<th scope="col">
+                              			  <p>일자</p>
+                                    </th>
+                              			<th scope="col">
+                              			  <p>시간</p>
+                              			</th>
+                              			<th scope="col">
+                              			  <p>이동 경로</p>
+                              			</th>
+                              			<th scope="col">
+                              			  <p>접촉자 사항</p>
+                              			</th>
+                              		</tr>
+                              		<tr>
+                              			<td rowspan="6" style="width: 60px; height: 318px;">
+                              			<p>02.26</p>
+                              			</td>
+                              			<td style="width: 60px; height: 24px;">
+                              			<p>11:00</p>
+                              			</td>
+                              			<td style="width: 327px; height: 24px;">
+                              			<p>지인 B씨 거주주택(조천읍 소재)</p>
+                              			</td>
+                              			<td style="width: 187px; height: 24px;">
+                              			<p style="margin-left: 6pt;">지인 B씨 등 3명</p>
+                              			</td>
+                              		</tr>
+                              		<tr>
+                              			<td style="width: 60px; height: 74px;">
+                              			<p>12:00</p>
+
+                              			<p>~</p>
+
+                              			<p>17:30</p>
+                              			</td>
+                              			<td style="width: 327px; height: 74px;">
+                              			<p style="margin-left: 6pt;">지인 B 등 3명과 함께</p>
+
+                              			<p style="margin-left: 6pt;">구좌읍 동복항 방파제에서 낚시</p>
+                              			</td>
+                              			<td style="width: 187px; height: 74px;">
+                              			<p style="margin-left: 6pt;">&nbsp;</p>
+                              			</td>
+                              		</tr>
+                              		<tr>
+                              			<td style="width: 60px; height: 74px;">
+                              			<p>17:40</p>
+
+                              			<p>~</p>
+
+                              			<p>18:25</p>
+                              			</td>
+                              			<td style="width: 327px; height: 74px;">
+                              			<p style="margin-left: 6pt;">위 일행 3명과 함께</p>
+
+                              			<p style="margin-left: 6pt;">‘제주 그때 그집 함덕점’ 저녁식사</p>
+                              			</td>
+                              			<td style="width: 187px; height: 74px;">
+                              			<p style="margin-left: 6pt;">식당 직원 1명</p>
+                              			</td>
+                              		</tr>
+                              		<tr>
+                              			<td style="width: 60px; height: 49px;">
+                              			<p>18:25~</p>
+
+                              			<p>18:30</p>
+                              			</td>
+                              			<td style="width: 327px; height: 49px;">
+                              			<p style="margin-left: 6pt;">‘제주 그때 그집 함덕점’ 식당 차량으로</p>
+
+                              			<p style="margin-left: 6pt;">‘함덕오군뮤직타운 노래방’ 이동</p>
+                              			</td>
+                              			<td style="width: 187px; height: 49px;">
+                              			<p style="margin-left: 6pt;">&nbsp;</p>
+                              			</td>
+                              		</tr>
+                              		<tr>
+                              			<td style="width: 60px; height: 74px;">
+                              			<p>18:30</p>
+
+                              			<p>~</p>
+
+                              			<p>21:00</p>
+                              			</td>
+                              			<td style="width: 327px; height: 74px;">
+                              			<p style="margin-left: 6pt;">위의 노래방</p>
+                              			</td>
+                              			<td style="width: 187px; height: 74px;">
+                              			<p style="margin-left: 6pt;">직원 1명</p>
+                              			</td>
+                              		</tr>
+                              		<tr>
+                              			<td style="width: 60px; height: 24px;">
+                              			<p>21:00</p>
+                              			</td>
+                              			<td style="width: 327px; height: 24px;">
+                              			<p style="margin-left: 6pt;">택시 타고 자택 귀가(함덕파출소 앞에서 탑승)</p>
+                              			</td>
+                              			<td style="width: 187px; height: 24px;">
+                              			<p style="margin-left: 6pt;">택시기사 1명</p>
+                              			</td>
+                              		</tr>
+                              		<tr>
+                              			<td rowspan="4" style="width: 60px; height: 120px;">
+                              			<p>02.27</p>
+                              			</td>
+                              			<td style="width: 60px; height: 49px;">
+                              			<p>&nbsp;</p>
+                              			</td>
+                              			<td style="width: 327px; height: 49px;">
+                              			<p style="margin-left: 6pt;">거주 주택에서 기상 후 휴식</p>
+
+                              			<p><u>※ </u><u>피곤함을 느낌</u></p>
+                              			</td>
+                              			<td style="width: 187px; height: 49px;">
+                              			<p>&nbsp;</p>
+                              			</td>
+                              		</tr>
+                              		<tr>
+                              			<td style="width: 60px; height: 24px;">
+                              			<p>13:00</p>
+                              			</td>
+                              			<td style="width: 327px; height: 24px;">
+                              			<p>지인 B씨의 차를 타고 함덕 해안도로 드라이브</p>
+                              			</td>
+                              			<td style="width: 187px; height: 24px;">
+                              			<p>&nbsp;</p>
+                              			</td>
+                              		</tr>
+                              		<tr>
+                              			<td style="width: 60px; height: 24px;">
+                              			<p>16:56</p>
+                              			</td>
+                              			<td style="width: 327px; height: 24px;">
+                              			<p>함덕 GS25 코업시티점 방문</p>
+                              			</td>
+                              			<td style="width: 187px; height: 24px;">
+                              			<p>접촉자 파악중</p>
+                              			</td>
+                              		</tr>
+                              		<tr>
+                              			<td style="width: 60px; height: 24px;">
+                              			<p>17:00</p>
+                              			</td>
+                              			<td style="width: 327px; height: 24px;">
+                              			<p>지인 B씨의 거주 주택으로 귀가(집에서 저녁식사)</p>
+                              			</td>
+                              			<td style="width: 187px; height: 24px;">
+                              			<p>&nbsp;</p>
+                              			</td>
+                              		</tr>
+                              		<tr>
+                              			<td rowspan="2" style="width: 60px; height: 48px;">
+                              			<p>02.28</p>
+                              			</td>
+                              			<td style="width: 60px; height: 24px;">
+                              			<p>&nbsp;</p>
+                              			</td>
+                              			<td style="width: 327px; height: 24px;">
+                              			<p>거주 주택에서 기상 후 휴식</p>
+                              			</td>
+                              			<td style="width: 187px; height: 24px;">
+                              			<p>&nbsp;</p>
+                              			</td>
+                              		</tr>
+                              		<tr>
+                              			<td style="width: 60px; height: 24px;">
+                              			<p>21:57</p>
+                              			</td>
+                              			<td style="width: 327px; height: 24px;">
+                              			<p>치킨 배달 받음</p>
+                              			</td>
+                              			<td style="width: 187px; height: 24px;">
+                              			<p>배달 직원 1명</p>
+                              			</td>
+                              		</tr>
+                              		<tr>
+                              			<td rowspan="5" style="width: 60px; height: 191px;">
+                              			<p>02.29</p>
+
+                              			<p>&nbsp;</p>
+                              			</td>
+                              			<td style="width: 60px; height: 24px;">
+                              			<p>&nbsp;</p>
+                              			</td>
+                              			<td style="width: 327px; height: 24px;">
+                              			<p style="margin-left: 6pt;">거주 주택에서 기상 후 휴식</p>
+                              			</td>
+                              			<td style="width: 187px; height: 24px;">
+                              			<p>&nbsp;</p>
+                              			</td>
+                              		</tr>
+                              		<tr>
+                              			<td style="width: 60px; height: 74px;">
+                              			<p>14:00</p>
+
+                              			<p>~</p>
+
+                              			<p>14:49</p>
+                              			</td>
+                              			<td style="width: 327px; height: 74px;">
+                              			<p>지인 B씨와 함덕 ‘대성아구찜’ 식사</p>
+
+                              			<p>※ 다른 테이블 손님들과는 멀리 떨어져 있었음.</p>
+                              			</td>
+                              			<td style="width: 187px; height: 74px;">
+                              			<p>식당 직원 1명</p>
+
+                              			<p>(확진자가 카드 결제, 접촉여부 파악 중)</p>
+                              			</td>
+                              		</tr>
+                              		<tr>
+                              			<td style="width: 60px; height: 46px;">
+                              			<p>15:20</p>
+                              			</td>
+                              			<td style="width: 327px; height: 46px;">
+                              			<p>지인 B씨와 함께 신촌 ‘피플’까페 커피 2잔 테이크 아웃</p>
+                              			</td>
+                              			<td style="width: 187px; height: 46px;">
+                              			<p>여직원 2명</p>
+                              			</td>
+                              		</tr>
+                              		<tr>
+                              			<td colspan="3" style="width: 574px; height: 24px;">
+                              			<p>신촌 부둣가쪽 20분정도 산책, 만난 사람 없음</p>
+                              			</td>
+                              		</tr>
+                              		<tr>
+                              			<td style="width: 60px; height: 24px;">
+                              			<p>17:00</p>
+                              			</td>
+                              			<td style="width: 327px; height: 24px;">
+                              			<p>거주 주택</p>
+                              			</td>
+                              			<td style="width: 187px; height: 24px;">
+                              			<p>&nbsp;</p>
+                              			</td>
+                              		</tr>
+                              		<tr>
+                              			<td rowspan="6" style="width: 60px; height: 142px;">
+                              			<p>03.01</p>
+                              			</td>
+                              			<td style="width: 60px; height: 24px;">
+                              			<p>09:00</p>
+                              			</td>
+                              			<td style="width: 327px; height: 24px;">
+                              			<p>기상</p>
+                              			</td>
+                              			<td style="width: 187px; height: 24px;">
+                              			<p>&nbsp;</p>
+                              			</td>
+                              		</tr>
+                              		<tr>
+                              			<td style="width: 60px; height: 24px;">
+                              			<p>14:47</p>
+                              			</td>
+                              			<td style="width: 327px; height: 24px;">
+                              			<p>언니에게서 어머니 확진소식 연락받음</p>
+                              			</td>
+                              			<td style="width: 187px; height: 24px;">
+                              			<p>&nbsp;</p>
+                              			</td>
+                              		</tr>
+                              		<tr>
+                              			<td style="width: 60px; height: 24px;">
+                              			<p>16:00</p>
+                              			</td>
+                              			<td style="width: 327px; height: 24px;">
+                              			<p>지인 B씨 차로 한마음병원으로 출발</p>
+                              			</td>
+                              			<td style="width: 187px; height: 24px;">
+                              			<p>&nbsp;</p>
+                              			</td>
+                              		</tr>
+                              		<tr>
+                              			<td style="width: 60px; height: 24px;">
+                              			<p>17:00</p>
+                              			</td>
+                              			<td style="width: 327px; height: 24px;">
+                              			<p>한마음병원 도착</p>
+                              			</td>
+                              			<td style="width: 187px; height: 24px;">
+                              			<p>&nbsp;</p>
+                              			</td>
+                              		</tr>
+                              		<tr>
+                              			<td style="width: 60px; height: 24px;">
+                              			<p>19:00</p>
+                              			</td>
+                              			<td style="width: 327px; height: 24px;">
+                              			<p>거주 주택 도착 후 자가격리</p>
+                              			</td>
+                              			<td style="width: 187px; height: 24px;">
+                              			<p>&nbsp;</p>
+                              			</td>
+                              		</tr>
+                              		<tr>
+                              			<td style="width: 60px; height: 24px;">
+                              			<p>24:00</p>
+                              			</td>
+                              			<td style="width: 327px; height: 24px;">
+                              			<p>확진 판정 후 이송</p>
+                              			</td>
+                              			<td style="width: 187px; height: 24px;">
+                              			<p>&nbsp;</p>
+                              			</td>
+                              		</tr>
+                              	</tbody>
+                              </table>
+                              <div class="source"><span class="title">출처</span><span class="desc"><a href="http://www.jeju.go.kr/wel/healthCare/corona/coronaNotice.htm?act=view&seq=1234263">제주특별자치도</a></span></div>
                             </div>
                           </div>
                         </div>
@@ -1293,6 +1596,7 @@
                                   </tr>
                                 </tbody>
                               </table>
+                              <p>※ 해당 동선은 1차적으로 확진자 진술에 기초한 것이어서 추후 변경될 수 있습니다.</p>
                             </div>
                           </div>
                           <div class="modal-footer">
