--- a/index.html
+++ b/index.html
@@ -1631,7 +1631,7 @@
                         <a href="https://www.ncloud.com" target="_blank">네이버 클라우드 플랫폼</a>에서 서버 및 지도 API를 무상 지원합니다.
                       </li>
                       <li>
-                        모든 소스는 오픈되어 있습니다. 다음에도 비슷한 상황이 발생되었을 경우, 이 <a href="https://github.com/LiveCoronaDetector/livecod" target="_blank">프로젝트</a>를 사용해주세요.
+                        모든 소스는 오픈되어 있습니다. 지역별 현황판을 만들고 싶으시거나 다음에도 비슷한 상황이 발생되었을 경우, 이 <a href="https://github.com/LiveCoronaDetector/livecod" target="_blank">프로젝트</a>를 사용해주세요. 데이터만 가져가시고 싶으신 경우 http://livecorona.co.kr/totalDataSet.js 에서 데이터를 가져가시기 바랍니다. 업데이트되는 파일입니다.
                       </li>
                     </ul>
                     <p class="text-right">
