side navigation 디자인 변경 / 클릭 이벤트 추가 / 스크롤 위치 값에 따른 네비게이션 변경 값 수정 전

--- a/index.html
+++ b/index.html
@@ -1650,6 +1650,8 @@
     document.querySelectorAll('a[href^="#"]').forEach(function(anchor) {
       anchor.addEventListener('click', function(e) {
         e.preventDefault();
+        $(this).parent().siblings().children('a').removeClass('active');
+        $(this).addClass('active');
         document.querySelector(this.getAttribute('href')).scrollIntoView({
           behavior: 'smooth'
         });
