--- a/index.html
+++ b/index.html
@@ -433,12 +433,12 @@
                   <a href="img/safe_2.png" class="block" target="_blank"><img src="img/safe_2.png" alt="Safe rule2" /></a>
                   <a href="img/safe_3.png" class="block" target="_blank"><img src="img/safe_3.png" alt="Safe rule3" /></a>
                   <ul>
-                    <li><a href="http://www.cdc.go.kr/contents.es?mid=a21111060000">질병관리본부 안전수칙</a></li>
-                    <li><a href="https://www.cdc.go.kr/linkCheck.es?mid=a21111050600">코로나19 바이러스 선별진료소</a></li>
+                    <li><a target="_blank" href="http://www.cdc.go.kr/contents.es?mid=a21111060000">질병관리본부 안전수칙</a></li>
+                    <li><a target="_blank" href="https://www.cdc.go.kr/linkCheck.es?mid=a21111050600">코로나19 바이러스 선별진료소</a></li>
                   </ul>
-                  <a class="btn btn-primary" style="width:100%;margin-bottom:1rem;" href="https://www.notion.so/a80c76132f8b4a63a6f4901b1320bf62" role="button">자기동선기록 가이드</a>
-                  <a class="btn btn-primary" style="width:100%;margin-bottom:1rem;" href="https://news.naver.com/main/factcheck/main.nhn" role="button">코로나19 바이러스 관련 팩트체크</a>
-                  <a class="btn btn-primary" style="width:100%" href="https://www.notion.so/381a1f09e420476c839cdbe543dbb3bb" role="button">소상공인 지원사업</a>
+                  <a target="_blank" class="btn btn-primary" style="width:100%;margin-bottom:1rem;" href="https://www.notion.so/a80c76132f8b4a63a6f4901b1320bf62" role="button">자기동선기록 가이드</a>
+                  <a target="_blank" class="btn btn-primary" style="width:100%;margin-bottom:1rem;" href="https://news.naver.com/main/factcheck/main.nhn" role="button">코로나19 바이러스 관련 팩트체크</a>
+                  <a target="_blank" class="btn btn-primary" style="width:100%" href="https://www.notion.so/381a1f09e420476c839cdbe543dbb3bb" role="button">소상공인 지원사업</a>
                 </div>
               </div>
             </div>
@@ -571,7 +571,7 @@
                         ※ 1월 25일까지의 감염력이 유지된다는 전제 하 그래프 입니다. 이를 바탕으로 다양한 시나리오별 예측값을 시각화할 예정이며, 차후 비슷한 사례가 발생되었을 경우에도 사용할 수 있도록
                         모든 소스를 오픈하도록 하겠습니다.
                       </p>
-                      <div class="source"><span class="title">출처</span><span class="desc">lancet 논문 '<a href="https://www.thelancet.com/journals/lancet/article/PIIS0140-6736(20)30260-9/fulltext">Nowcasting and forecasting the potential domestic and
+                      <div class="source"><span class="title">출처</span><span class="desc">lancet 논문 '<a target="_blank" href="https://www.thelancet.com/journals/lancet/article/PIIS0140-6736(20)30260-9/fulltext">Nowcasting and forecasting the potential domestic and
                             international spread of the 2019-nCoV outbreak originating in Wuhan, China: a modelling study</a>'</span></div>
                     </div>
                   </div>
@@ -858,9 +858,9 @@
                                   </div>
                               </div>
                               <!-- //2번째 확진자 -->
-                              <div class="source"><span class="title">출처</span><span class="desc"><a href="http://www.jeju.go.kr/wel/healthCare/corona/coronaNotice.htm?act=view&seq=1233486">제주특별자치도</a><br>
+                              <div class="source"><span class="title">출처</span><span class="desc"><a target="_blank" href="http://www.jeju.go.kr/wel/healthCare/corona/coronaNotice.htm?act=view&seq=1233486">제주특별자치도</a><br>
                                   * 해당 양성반응자는 2월 22일 확진 판정</span></div>
-                              <div class="source"><span class="title">상세정보</span><span class="desc"><a href="https://jeju.go.kr/files/convert/202002/99cb45de-763d-41f2-bf48-2b5da5549045.hwp.htm" target="_blank">제주특별자치도 정보제공 상세이동경로</a></span></div>
+                              <div class="source"><span class="title">상세정보</span><span class="desc"><a target="_blank" href="https://jeju.go.kr/files/convert/202002/99cb45de-763d-41f2-bf48-2b5da5549045.hwp.htm">제주특별자치도 정보제공 상세이동경로</a></span></div>
                             </div>
                           </div>
                         </div>
@@ -934,7 +934,7 @@
                         <!-- //확진자 News 1 -->
 
                       </div>
-
+                      <a class="btn btn-primary" target="_blank" style="margin:1rem;" href="http://ncov.mohw.go.kr/bdBoardList_Real.do?brdId=1&brdGubun=12&ncvContSeq=&contSeq=&board_id=&gubun=" role="button">질병관리 본부의 전국 확진자 이동동선</a>
                     </div>
                   </div>
                 </div>
@@ -986,7 +986,7 @@
                     <div class="card-body">
                       <div class="chart-area">
                         <p class="text-right">* 19년 일별 평균
-                          <a href="http://www.visitjeju.or.kr/web/bbs/bbsList.do?bbsId=TOURSTAT">입도객</a> 추가</p>
+                          <a target="_blank" href="http://www.visitjeju.or.kr/web/bbs/bbsList.do?bbsId=TOURSTAT">입도객</a> 추가</p>
                         <canvas id="myAreaChart_three"></canvas>
                       </div>
                     </div>
