medicine update test

--- a/index_test.html
+++ b/index_test.html
@@ -642,8 +642,7 @@
                     </div>
 
                     <div class="card-body">
-                      지도
-                      <!-- 지도 -->
+                      <div id="jejuMedicineMap" style="width:100%;height:1000px;"></div>
                     </div>
                   </div>
                 </div>
