--- a/index_test.html
+++ b/index_test.html
@@ -1686,6 +1686,9 @@
   <!-- koreaMap -->
   <script src="js/koreaMap.js"></script>
 
+  <!-- koreaMap -->
+  <script src="js/jejuMedicine.js"></script>
+
   <!-- 월드맵 관련 스크립트  -->
   <script src="js/worldmap.js"></script>
 
