--- a/index_test.html
+++ b/index_test.html
@@ -642,7 +642,7 @@
                     </div>
 
                     <div class="card-body">
-                      <div id="jejuMedicineMap" style="width:100%;height:1000px;"></div>
+                      <div id="jejuMedicineMap" style="width:100%;height:35rem;"></div>
                     </div>
                   </div>
                 </div>
